logs/restart-mongo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/JsonForm-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/JsonSir-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Python_EasyConfig-0.1.6.dist-info'...
Listing './lib/python3.5/site-packages/Python_RESTArt-0.1.5.dist-info'...
Listing './lib/python3.5/site-packages/RESTArt_Mongo-0.1.4.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-4.0.dist-info'...
Listing './lib/python3.5/site-packages/easyconfig'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/jsonform'...
Listing './lib/python3.5/site-packages/jsonpatch-1.7.dist-info'...
Listing './lib/python3.5/site-packages/jsonpointer-1.14.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/jsonsir'...
Listing './lib/python3.5/site-packages/jsonsir/contrib'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-2.7.2.egg-info'...
Listing './lib/python3.5/site-packages/restart'...
Listing './lib/python3.5/site-packages/restart/config'...
Listing './lib/python3.5/site-packages/restart/ext'...
Listing './lib/python3.5/site-packages/restart_mongo'...
Listing './lib/python3.5/site-packages/restart_mongo/ext'...
Compiling './lib/python3.5/site-packages/restart_mongo/utils.py'...
***   File "./lib/python3.5/site-packages/restart_mongo/utils.py", line 20
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
